# ml-service

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  cloudbuild.yaml  justfile  pyproject.toml
.github/workflows/: ci.yml  paid-tests.yml
src/ml_service/: __init__.py  config.py  errors.py  main.py
src/ml_service/api/: __init__.py
src/ml_service/api/middleware/: __init__.py  auth.py
src/ml_service/api/routes/: __init__.py  classification.py  completion.py  embedding.py  health.py  ocr.py
src/ml_service/clients/: __init__.py  embeddinggemma.py  gemini.py
src/ml_service/models/: requests.py  responses.py
src/ml_service/services/: __init__.py  classification.py  completion.py  embedding.py  ocr.py
tests/: conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py
tests/integration/free/: __init__.py  test_embedding.py  test_health.py
tests/integration/paid/: __init__.py  test_classification.py  test_completion.py  test_ocr.py
tests/unit/: __init__.py  test_auth.py  test_errors.py  test_gemini_ssrf.py  test_models.py  test_services.py
