[project]
name = "ml-service"
version = "0.1.0"
description = "FastAPI-based ML inference service for Cloud Run GPU with EmbeddingGemma and Gemini"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "RightCrowd Platform Team" }
]
keywords = ["ml", "fastapi", "gemini", "cloud-run", "gpu", "embeddings"]

dependencies = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.37.0",
    "google-genai>=1.41.0", # Note: google-generativeai is deprecated, using google-genai
    "transformers>=4.56.1",
    "torch>=2.6.0",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "sentence-transformers>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "httpx>=0.28.1",
    "ruff>=0.13.3",
    "pre-commit>=4.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_service"]

[tool.pytest.ini_options]
markers = [
    "free: Tests that run without API costs (EmbeddingGemma, health endpoints)",
    "paid: Tests that use paid APIs (Gemini API)",
]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
